--- a/index.html
+++ b/index.html
@@ -206,6 +206,15 @@
       renderLogs(); // Add commentMore actions
     };
 
+    const deleteTask = (i) => {
+      tasks.splice(i, 1);
+      logs[today].tasks = tasks;
+      saveData('tasks', tasks);
+      localStorage.setItem('logs', JSON.stringify(logs)); // Add commentMore actions
+      renderTasks();
+      renderLogs();
+    };
+
     const renderLogs = () => {
       const logDiv = document.getElementById('logs'); //Add commentMore actions
       logDiv.innerHTML = '';
